[project]
name = "runkeeper-strava-migrator"
version = "0.1.0"
description = ""
authors = [
    {name = "Carl",email = "cahj@netlight.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
]

[tool.poetry]
packages = [{include = "runkeeper_strava_migrator", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
